# ChatGPT-PR-Reviewer

./: .gitignore  README.md  app.py  config.json  github_api.py  gpt3.py  main.py  pyproject.toml  replit.nix  request_handler.py  requirements.txt  test_webhook.py
.ebextensions/: 01_flask.config
